# TrayMusicPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GitScript.py  README.md  countline.sh
app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  TrayApp.cpp  TrayApp.h  WindowManager.cpp  main.cpp  trayapp.cpp  trayapp.h  windowmanager.cpp  windowmanager.h
core/: CMakeLists.txt  Core.cpp  DatabaseManager.h  Logger.h  PlayMode.h  QLogger.h  Settings.cpp  Settings.h  Song.cpp  Song.h  config.h  core.cpp  core.h  core.qrc  logo.qrc  music.db
core/common/: Song.cpp  TrayConfig.h  song.cpp  song.h  trayconfig.h
core/databasemanager/: DatabaseManager.cpp  DatabaseManager.h  databasemanager.cpp  databasemanager.h
core/include/: Core.h  Settings.h  core.h  coreinterface.h
core/include/Constants/: CoreConstants.h
core/include/backends/: QtAudioBackend.h
core/include/core/: CoreConstants.h  Player.h
core/include/engine/: Core.h  CoreConstants.h  Player.h
core/include/interfaces/: IAudioBackend.h  ICore.h  IPlayer.h
core/include/player/: Player.h
core/include/services/: DBManager.h  DatabaseManager.h  ListCache.h  Logger.h  Logger_qt.h  PlayList.h  PlayMode.h  Settings.h  Song.h
core/listcache/: ListCache.cpp  ListCache.h  listcache.cpp  listcache.h
core/lyricparser/: lyricparser.cpp  lyricparser.h
core/lyricservice/: lyricservice.cpp  lyricservice.h
core/player/: Player.cpp  Player.h  player.cpp  player.h
core/playlist/: PlayList.cpp  PlayList.h  playlist.cpp  playlist.h
core/settings/: Settings.cpp  Settings.h  init_linux.json  init_win32.json  settings.cpp
core/src/: Core.cpp  DBManager.cpp  DatabaseManager.cpp  ListCache.cpp  Logger.cpp  PlayList.cpp  Player.cpp  Settings.cpp  Song.cpp
data/: music.db
src/app/: CMakeLists.txt  coreservice.cpp  coreservice.h  launcher_win32.cpp  main.cpp  trayapp.cpp  trayapp.h
src/core/: CMakeLists.txt  core.cpp  core.h  coreservice.cpp  databasemanager.cpp  listcache.cpp  lyricservice.cpp  musicmetadata.cpp  musicmetadata.h  play.cpp  player.cpp  playerbackend.cpp  playlist.cpp  settings.cpp  trayconfig.h
src/core/include/common/: trayconfig.h
src/core/include/coreservice/: coreservice.h
src/core/include/databasemanager/: databasemanager.h
src/core/include/listcache/: listcache.h
src/core/include/lyricservice/: lyricservice.h
src/core/include/player/: player.h
src/core/include/playerbackend/: playerbackend.h
src/core/include/playlist/: playlist.h
src/core/include/settings/: settings.h
src/resource/: CMakeLists.txt  qss.qrc  svg.qrc
src/resource/include/: trayqss.h  traysvg.h
src/ui/: CMakeLists.txt  MainWindow.cpp  configwidget.cpp  filepathconfigwidget.cpp  filepathconfigwidget.h  lyricdelegate.cpp  lyricmodel.cpp  lyricview.cpp  lyricwidget.cpp  musiclistwidget.cpp  playerwidget.cpp  settingswidget.cpp  topbarwidget.cpp  viewdatamodel.cpp  viewdelegate.cpp  viewwidget.cpp  windowmanager.cpp
src/ui/include/: lyricwidget.h  musiclistwidget.h  playerwidget.h  topbarwidget.h  uitools.h  viewwidget.h
src/widgets/: CMakeLists.txt  listselectiondialog.cpp  marqueelabel.cpp  progressbar.cpp  rotatinglabel.cpp  stylebutton.cpp  styleslider.cpp  volumecontroller.cpp
test/: CMakeLists.txt  TestConfigWidget.cpp  TestCore.cpp  TestDB.cpp  TestLogger.cpp  TestLyricParser.cpp  TestLyricView.cpp  TestQRC.cpp  TestSplitter.cpp  main.cpp  testString.cpp  testTaglib.cpp
test/TestLyricParser/: CMakeLists.txt  TestLyricParser.cpp  TestSetup.h
tools/: CMakeLists.txt
tools/logger/: Logger.cpp  QLogger.cpp  QLogger.h
tools/lyricparser/: README.md  filehelper.cpp  filehelper.h  lyricparser.cpp  lyricparser.h  lyricparser.tpp  scopedfile.cpp  textfilehelper.cpp  textfilehelper.h
ui/: CMakeLists.txt  MusicListWidget.cpp  PlayerWidget.cpp  SettingsWidget.cpp  TopBarWidget.cpp  ViewDelegate.h  ViewWidget.cpp  WindowManager.cpp  appearancewidget.h  configwidget.cpp  datamodel.cpp  datamodel.h  filepathconfigwidget.cpp  lyricmodel.h  lyricwidget.cpp  lyricwidget.h  musiclistwidget.cpp  playerwidget.cpp  settingswidget.cpp  svg.qrc  topbarwidget.cpp  viewdatamodel.cpp  viewdatamodel.h  viewdelegate.cpp  viewdelegate.h  viewwidget.cpp
ui/common/: UiConfig.h  uiconfig.h
ui/include/: Assets.h  TopBarWidget.h  WindowManager.h  configwidget.h  lyricwidget.h  musiclistwidget.h  playerwidget.h  settingswidget.h  uimetadata.h  viewwidget.h
ui/include/assets/: Assets.h
ui/include/mainwindow/: MainWindow.h
ui/include/panel/: BetterButton.h  DataModel.h  ListSelectionDialog.h  MarqueeLabel.h  ProgressBar.h  RotatingLabel.h  ViewDelegate.h  VolumeController.h
ui/include/ui/: Assets.h  BetterButton.h  MainWindow.h  MusicListWidget.h  PlayerWidget.h  ProgressBar.h  SettingsWidget.h  TopBarWidget.h  ViewWidget.h  WindowManager.h
ui/music_list_widget/: MusicListWidget.cpp  MusicListWidget.h
ui/panels/: BetterButton.cpp  DataModel.cpp  DataModel.h  ListSelectionDialog.cpp  ListSelectionDialog.h  MarqueeLabel.cpp  ProgressBar.cpp  ProgressBar.h  RotatingLabel.cpp  RotatingLabel.h  ViewDelegate.cpp  ViewDelegate.h  VolumeController.cpp  VolumeController.h  apperancewidget.h  betterbutton.cpp  betterbutton.h  configwidget.cpp  filepathconfigwidget.cpp  filepathconfigwidget.h  listselectiondialog.cpp  marqueelabel.cpp  marqueelabel.h  progressbar.cpp  progressbar.h  rotatinglabel.cpp  verticalbuttonlistwidget.cpp  verticalbuttonlistwidget.h  volumecontroller.cpp  volumecontroller.h
ui/player_widget/: PlayerWidget.cpp  PlayerWidget.h
ui/qss/MusicListButton/: ButtonVolume.qss
ui/res/: qss.qrc  svg.qrc
ui/settings_widget/: SettingsWidget.cpp  SettingsWidget.h
ui/src/: BetterButton.cpp  DataModel.cpp  ListSelectionDialog.cpp  MainWindow.cpp  MarqueeLabel.cpp  MusicListWidget.cpp  PlayerWidget.cpp  ProgressBar.cpp  RotatingLabel.cpp  SettingsWidget.cpp  TopBarWidget.cpp  ViewDelegate.cpp  ViewWidget.cpp  VolumeController.cpp  WindowManager.cpp  main.cpp
ui/top_bar_widget/: TopBarWidget.cpp
ui/view_widget/: DataModel.cpp  ViewDelegate.cpp  ViewDelegate.h  ViewWidget.cpp  ViewWidget.h
(+83 files in other folders)
